--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "yiisoft/yii2": "*",
 		"noam148/yii2-image-resize" : "*",
-		"kartik-v/yii2-widget-fileinput": "@dev"
+		"kartik-v/yii2-widget-fileinput": "@dev",
+	    	"gumlet/php-image-resize": "^1.9"
     },
     "autoload": {
         "psr-4": {
