--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
-    "name": "noam148/yii2-image-manager",
+    "name": "serikshaikamalov/yii2-image-manager",
     "description": "A Yii2 module/widget for upload and cropping images",
     "keywords": ["yii2", "extension", "widget", "module", "image", "upload", "crop", "manager"],
-    "homepage": "https://github.com/noam148/yii2-image-manager",
+    "homepage": "https://github.com/serikshaikamalov/yii2-image-manager",
     "type": "yii2-extension",
     "license": "BSD-3-Clause",
     "authors": [
         {
-            "name": "Noam148",
-			"homepage": "https://github.com/noam148/" 
+            "name": "serikshaikamalov",
+			"homepage": "https://github.com/serikshaikamalov/" 
         }
     ],
     "require": {
